refactor(domain): group Notification fields into VOs and reorganize d… (#24)
* refactor(domain): group Notification fields into VOs and reorganize domain by DDD building blocks

* Fix (test): remove the external ID parameter hardcoded into the code.